fix bugs on people box overflow scroll

--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -204,7 +204,7 @@
       font-size: 14px;
       color: #555;
       margin: 8px auto;
-      background-color: #dce4ef;
+      background-color: #e7ecf3;
       padding: 8px 16px;
       border-radius: 24px;
       text-decoration: none;
