--- a/src/components/PeopleBox/style.scss
+++ b/src/components/PeopleBox/style.scss
@@ -11,39 +11,44 @@
   padding: 1em;
   border-radius: 12px;
 
-  .person {
-    padding: 8px 0;
-    cursor: pointer;
-    display: flex;
-    text-decoration: none;
-    color: #000;
-    transition: .3s ease-in-out all;
-    &:hover {
-      box-shadow: inset -24px 0 48px -47px slategrey;
-      border-radius: 0 8px 8px 0;
-      padding-left: 8px;
-    }
-
-    .user-icon {
-      width: 36px;
-      height: 36px;
-      border-radius: 50%;
-      margin-right: 12px;
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-      border: 1px solid #ddd;
-
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+  .people-wrapper {
+    max-height: 350px;
+    overflow-y: auto;
+    .person {
+      padding: 8px 0;
+      cursor: pointer;
+      display: flex;
+      text-decoration: none;
+      color: #000;
+      transition: .3s ease-in-out all;
+      &:hover {
+        box-shadow: inset -24px 0 48px -47px slategrey;
+        border-radius: 0 8px 8px 0;
+        padding-left: 8px;
+      }
+  
+      .user-icon {
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        margin-right: 12px;
+        text-align: center;
+        position: relative;
+        overflow: hidden;
+        border: 1px solid #ddd;
+  
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .username {
+        line-height: 32px;
       }
     }
-    .username {
-      line-height: 32px;
-    }
   }
+
   .empty-user {
     color: #aaa;
   }
